fix: changes the background color of the selected contact list item to a new shade of blue for enhanced visibility and match mockup

--- a/src/app/main-pages/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main-pages/contacts/contact-list/contact-list.component.scss
@@ -71,11 +71,15 @@ section{
   }
 
   &.selected {
-    background-color: $progress-bar-blue;
+    background-color: $blue;
     border-radius: 10px;
 
-    p, a {
+    p {
       color: $white;
+    }
+
+    a {
+      color: $email-blue;
     }
   }
 }
